# nfl_predictions

./: $null  .env.example  .gitignore  README.md  SECURITY.md  databricks.yml  nfl_predictions.code-workspace  pyproject.toml
.githooks/: pre-commit
notebooks/: 00_download_pbp_to_volume.py  10_ingest_teams.py  11_ingest_schedules.py  12_ingest_rosters.py  20_ingest_odds_from_schedules.py  21_ingest_odds_api.py  22_ingest_nfelo_ratings.py  30_load_pbp_from_volume.py  40_build_players.py  50_predict_upcoming_week.py  51_predict_multi_model.py  55_backtest_season.py  60_grade_elapsed_week.py  61_rca_agent_tools.py  80_apply_uc_column_descriptions.py  apply_uc_column_descriptions.py  build_players.py  download_pbp_to_volume.py  grade_elapsed_week.py  ingest_odds_from_schedules.py  ingest_rosters.py  load_pbp_from_volume.py  predict_upcoming_week.py  validate_bootstrap.py  validate_weekly_refresh.py
resources/: nfl_annual_refresh_job.yml  nfl_backtest_job.yml  nfl_bootstrap_job.yml  nfl_copilot.app.yml  nfl_game_pick_metrics.genie_space.yml  nfl_medallion_migration.pipeline.yml  nfl_pick_miss_rca.genie_space.yml  nfl_rca_dashboard.app.yml  nfl_weekly_picks.app.yml  nfl_weekly_pipeline_job.yml  nfl_weekly_predictions_job.yml  nfl_weekly_refresh_job.yml
scripts/: _check_odds.py  audit_unmapped_teams.py  backfill_prediction_grades.py  backfill_prediction_rca.py  check_public_ready.py  compare_nfelo_blend.py  create_mv_game_pick_metrics.sql  create_prediction_grades_table.sql  deploy_bundle.py  deploy_mv_game_pick_metrics.py  download_pbp_to_volume.py  ingest_nfelo_local.py  (+13 more)
(+146 files in other folders)
